LU-4065 mdt: Ensure accurate coordinator state

Some control must be added in procfs interface to
ensure that the coordinator state will be kept accurate.

Signed-off-by: Bruno Faccini <bruno.faccini@intel.com>
Change-Id: I41e5b42ddbdbcb652c202ee01fa120126e78f3d2
Reviewed-on: http://review.whamcloud.com/8074
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: jacques-Charles Lafoucriere <jacques-charles.lafoucriere@cea.fr>
Reviewed-by: Jinshan Xiong <jinshan.xiong@intel.com>
Reviewed-by: John L. Hammond <john.hammond@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>